Helm-Exercise/work/consent-nginx-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-consent-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: consent.localhost
    http:
      paths:
      - backend:
          serviceName: my-consent-service
          servicePort: 80
