Helm-Exercise/work/gitea-nginx-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-gitea-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: gitea.localhost
    http:
      paths:
      - backend:
          serviceName: my-gitea-service
          servicePort: 80
 


#make three ingresss for all three services
