Helm-Exercise/work/hydra-nginx-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-hydra-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: hydra.localhost
    http:
      paths:
      - backend:
          serviceName: my-hydra-service
          servicePort: 80
 


#make three ingresss for all three services
